--- a/index.html
+++ b/index.html
@@ -50,71 +50,7 @@
               <div class="forecast__city">
                 <h1>Aktobe</h1>
               </div>
-              <div class="forecast__list">
-                <div class="forecast__item">
-                  <div class="forecast__time">
-                    <span>17 May</span>
-                    <span>12:00</span>
-                  </div>
-                  <div class="forecast__weather">
-                    <div class="forecast__temperature">
-                      <span>Temperature: 13°</span>
-                      <span>Feels like: 10°</span>
-                    </div>
-                    <div class="forecast__icon">
-                      <span>Rain</span>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="forecast__item">
-                  <div class="forecast__time">
-                    <span>17 May</span>
-                    <span>13:00</span>
-                  </div>
-                  <div class="forecast__weather">
-                    <div class="forecast__temperature">
-                      <span>Temperature: 13°</span>
-                      <span>Feels like: 10°</span>
-                    </div>
-                    <div class="forecast__icon">
-                      <span>Rain</span>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="forecast__item">
-                  <div class="forecast__time">
-                    <span>17 May</span>
-                    <span>14:00</span>
-                  </div>
-                  <div class="forecast__weather">
-                    <div class="forecast__temperature">
-                      <span>Temperature: 13°</span>
-                      <span>Feels like: 10°</span>
-                    </div>
-                    <div class="forecast__icon">
-                      <span>Rain</span>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="forecast__item">
-                  <div class="forecast__time">
-                    <span>17 May</span>
-                    <span>15:00</span>
-                  </div>
-                  <div class="forecast__weather">
-                    <div class="forecast__temperature">
-                      <span>Temperature: 13°</span>
-                      <span>Feels like: 10°</span>
-                    </div>
-                    <div class="forecast__icon">
-                      <span>Rain</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
+              <div class="forecast__list"></div>
             </div>
           </div>
           <nav class="tabs-items">
