--- a/codeinium/index.html
+++ b/codeinium/index.html
@@ -171,6 +171,7 @@
 </body>
 <script type="module" src="./main.js"> </script>
 <script type="module" src="./localstorage.js"></script>
+<script type="module" src="./items.js"></script>
 <script src="./tabs.js"></script>
 </html>
 
