some change styles.css and add gitignore

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>ToDo Tasks</title>
 </head>
 <body>
-    <main>
+    <main class="main">
         <div class="wrapper">
             <header class="header">High
                 <a href="#" class="theme-toggle">
@@ -40,7 +40,6 @@
             </div>
         </div>
     </main>
-  
 <script type="module" src="./js/main.js"></script>
 
 </body>
