added work with date-fns

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <script defer src="js/tabs.js" ></script>
-    <script type="module" src="js/main.js" ></script>
+    <script type="module" src="js/index.js" ></script>
 </head>
 <body>
     <section class="weather">
@@ -28,7 +28,6 @@
                                     <div class="now__temperature">14°</div>
                                     <div class="now__date">
                                         <div class="now__date-day"></div>
-                                        <div class="now__date-month"></div>
                                         <div class="now__date-time"></div>
                                     </div>
                                 </div>
