--- a/weather.html
+++ b/weather.html
@@ -46,54 +46,55 @@
                     </div>
                     <div class="forecast-table forecast" id="tab-03">
                         <div class="locations-header forecast-details ">
-                            <p class="text-locations">Aktobe</p>
+                            <p class="text-locations" id="forecast-name"></p>
                         </div>
                         <div class="table-items">
                             <div class="table-container">
                                 <div class="forecast-date">
-                                    <p>17 May </p>
+                                    <p id="date-today1"></p>
                                     <p>12:00</p>
                                 </div>
                                 <div class="forecast-weather">
                                     <div class="forecast-temperature">
-                                        <p>Temperature: 13°</p>
-                                        <p>Feels like: 10°</p>
+                                        <p class="temp-12hour"></p>
+                                        <p class="feels-12hour"></p>
                                     </div>
                                     <div class="weather-icon">
-                                        <p class="rain">Rain</p>
-                                        <p class="forecast-icons"></p>
+                                        <p class="weather-12hour"></p>
+                                        <img class="forecast-icon12h forecast-icons"></img>
+                                        
                                     </div>
                                 </div>
                             </div>
                             <div class="table-container">
                                 <div class="forecast-date">
-                                    <p>17 May </p>
+                                    <p id="date-today2"></p>
                                     <p>15:00</p>
                                 </div>
                                 <div class="forecast-weather">
                                     <div class="forecast-temperature">
-                                        <p>Temperature: 13°</p>
-                                        <p>Feels like: 10°</p>
+                                        <p class="temp-15hour"></p>
+                                        <p class="feels-15hour"></p>
                                     </div>
                                     <div class="weather-icon">
-                                        <p class="rain">Rain</p>
-                                        <p class="forecast-icons"></p>
+                                        <p class="weather-15hour"></p>
+                                        <img class="forecast-icon15h forecast-icons"></img>
                                     </div>
                                 </div>
                             </div>
                             <div class="table-container">
                                 <div class="forecast-date">
-                                    <p>17 May </p>
+                                    <p id="date-today3"></p>
                                     <p>18:00</p>
                                 </div>
                                 <div class="forecast-weather">
                                     <div class="forecast-temperature">
-                                        <p>Temperature: 13°</p>
-                                        <p>Feels like: 10°</p>
+                                        <p class="temp-18hour"></p>
+                                        <p class="feels-18hour"></p>
                                     </div>
                                     <div class="weather-icon">
-                                        <p class="rain">Rain</p>
-                                        <p class="forecast-icons"></p>
+                                        <p class="weather-18hour"></p>
+                                        <img class="forecast-icon18h forecast-icons"></img>
                                     </div>
                                 </div>
                             </div>
@@ -116,8 +117,9 @@
         </div>
     </div>
     <script src="weather.js" type="module"></script>
-    <script type="module" src="storage.js"></script>
-    <script type="module" src="elements.js"></script>
+    <!-- <script type="module" src="storage.js"></script>
+    <script type="module" src="elements.js"></script> -->
+    <!-- <script type="module" src="../node_modules/date-fns/format/index.js"></script> -->
 </body>
 
 </html>
