--- a/codeinium/index.html
+++ b/codeinium/index.html
@@ -71,24 +71,24 @@
                         <div class="forecast">                            
                             <div class="datee">
                                 <div class="day">
-                                    <span class="dayy">15 Oct</span>
+                                    <span class="dayy"> </span>
                                 </div>
                                 <div class="time">
-                                    <span class="timee">12:00</span>
+                                    <span class="timee"> </span>
                                 </div>
                             </div>
                             <ol>
                                 <li>
                                     <div class="t">
-                                        <span id="temper">Temperature: </span>
+                                        <span id="temper"> </span>
                                     </div>
                                     <div class="t2">
-                                        <span id="weather-status">Rain</span>
+                                        <span id="weather-status"> </span>
                                     </div>
                                 </li>
                                 <li>
                                     <div class="f">
-                                        <span id="feels">Feels like: </span>
+                                        <span id="feels"> </span>
                                     </div>
                                     <div class="f2">
                                         <img src="./icons/cloud.svg" alt="weather-status">
@@ -99,24 +99,24 @@
                         <div class="forecast">                            
                             <div class="datee">
                                 <div class="day">
-                                    <span class="dayy">15 Oct</span>
+                                    <span class="dayy"> </span>
                                 </div>
                                 <div class="time">
-                                    <span class="timee">12:00</span>
+                                    <span class="timee"> </span>
                                 </div>
                             </div>
                             <ol>
                                 <li>
                                     <div class="t">
-                                        <span id="temper">Temperature: </span>
+                                        <span id="temper"> </span>
                                     </div>
                                     <div class="t2">
-                                        <span id="weather-status">Rain</span>
+                                        <span id="weather-status"> </span>
                                     </div>
                                 </li>
                                 <li>
                                     <div class="f">
-                                        <span id="feels">Feels like: </span>
+                                        <span id="feels"> </span>
                                     </div>
                                     <div class="f2">
                                         <img src="./icons/cloud.svg" alt="weather-status">
@@ -127,24 +127,24 @@
                         <div class="forecast">                            
                             <div class="datee">
                                 <div class="day">
-                                    <span class="dayy">15 Oct</span>
+                                    <span class="dayy"> </span>
                                 </div>
                                 <div class="time">
-                                    <span class="timee">12:00</span>
+                                    <span class="timee"> </span>
                                 </div>
                             </div>
                             <ol>
                                 <li>
                                     <div class="t">
-                                        <span id="temper">Temperature: </span>
+                                        <span id="temper"> </span>
                                     </div>
                                     <div class="t2">
-                                        <span id="weather-status">Rain</span>
+                                        <span id="weather-status"> </span>
                                     </div>
                                 </li>
                                 <li>
                                     <div class="f">
-                                        <span id="feels">Feels like: </span>
+                                        <span id="feels"> </span>
                                     </div>
                                     <div class="f2">
                                         <img src="./icons/cloud.svg" alt="weather-status">
@@ -170,8 +170,6 @@
     </div>
 </body>
 <script type="module" src="./main.js"> </script>
-<script type="module" src="./localstorage.js"></script>
-<script type="module" src="./items.js"></script>
 <script src="./tabs.js"></script>
 </html>
 
