обратный отсчет с использованием пакетов

--- a/codeinium/index.html
+++ b/codeinium/index.html
@@ -12,7 +12,7 @@
         <span for="date" >Выберите дату:</span> 
         <input id="date" type="datetime-local">
         <button class="button">Сосчитать</button>
-        <span class="new-date">3 года 20 дней 5 часов</span>
+        <span class="new-date"> </span>
     </div>
 </body>
 <script type='module' src="./main.js"></script>
