--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 				<input type="date" class="input input__date" id="inputDate">
 				<input type="submit" name="" >
 			</div>
+			<div class="reult" id="result"></div>
 		</form>
 		
 	</div>
