--- a/weather.html
+++ b/weather.html
@@ -15,7 +15,7 @@
             <form class="forecast-form" action="">
                 <input type="text" placeholder="Sity" class="inputForm">
                 <button class="button">
-                    <img src="/details-1/img/Loupe.svg" alt="Loupe">
+                    <img src="/img/Loupe.svg" alt="Loupe">
                 </button>
             </form>
             <div class="forecast-container">
@@ -27,7 +27,7 @@
                             height="120px">
 
                         <div class="forecast-months">
-                            <img src="/details-1/img/Heart.svg" alt="icon of heart" width="22px" height="22px"
+                            <img src="/img/Heart.svg" alt="icon of heart" width="22px" height="22px"
                                 class="heart">
                         </div>
                     </div>
@@ -62,7 +62,7 @@
                                     <div class="weather-icon">
                                         <p class="weather-12hour"></p>
                                         <img class="forecast-icon12h forecast-icons"></img>
-                                        
+
                                     </div>
                                 </div>
                             </div>
