checked errors and add popup

--- a/index.html
+++ b/index.html
@@ -13,14 +13,32 @@
             <form class="form-date">
                 <div class="enter-date">
                     <input class="from-date" type="datetime-local" >
-                    <button class="btn-start">Go</button>
+                    <button class="btn btn-start">Go</button>
                 </div>
             </form>
             <div class="count-down">
                 <span class="text-inform"></span>
                 <div class="date-count-down"></div>
             </div>
+            <div class="clear">
+                <button class="btn btn-clear">Clear</button>
+            </div>
         </div>
+
+        <div class="pop_up">
+            <div class="pop_up_container">
+                <div class="pop_up_body">
+                    <p class="error_text"></p>
+                    <button class="pop_up_close">
+                        <svg width="17" height="16" viewBox="0 0 17 16" fill="grey" xmlns="http://www.w3.org/2000/svg">
+                            <line y1="-0.5" x2="20.7803" y2="-0.5" transform="matrix(0.710506 0.703691 -0.65218 0.758064 1 1)" stroke="grey"/>
+                            <line y1="-0.5" x2="20.8155" y2="-0.5" transform="matrix(0.693335 -0.720616 0.670126 0.742247 1.56787 16)" stroke="grey"/>
+                        </svg>
+                    </button>
+                </div>
+            </div>
+        </div>
+
     <script type="module" src="./js/main.js"></script>    
     </body>
 </html>
