погода стала лучше, теперь не повторяется с датой, а идет перебор всем элементов даты

--- a/weather.html
+++ b/weather.html
@@ -51,7 +51,7 @@
                         <div class="table-items">
                             <div class="table-container">
                                 <div class="forecast-date">
-                                    <p id="date-today1"></p>
+                                    <p class="date"></p>
                                     <p>12:00</p>
                                 </div>
                                 <div class="forecast-weather">
@@ -68,7 +68,7 @@
                             </div>
                             <div class="table-container">
                                 <div class="forecast-date">
-                                    <p id="date-today2"></p>
+                                    <p class="date"></p>
                                     <p>15:00</p>
                                 </div>
                                 <div class="forecast-weather">
@@ -84,7 +84,7 @@
                             </div>
                             <div class="table-container">
                                 <div class="forecast-date">
-                                    <p id="date-today3"></p>
+                                    <p class="date"></p>
                                     <p>18:00</p>
                                 </div>
                                 <div class="forecast-weather">
