refactor of code

--- a/countdownApp/index.html
+++ b/countdownApp/index.html
@@ -9,9 +9,7 @@
   </head>
   <body>
     <div class="container">
-      <input class="user_input" type="date" /><button class="user_btn">
-        добавить
-      </button>
+      <input class="user_input" type="datetime-local" />
 
       <div class="display">
         <div class="display_wrapper">
