add timer without modules

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -18,28 +18,11 @@
       <div class="date-wrapper">
         <h1 class="date-header">Обратный отсчет</h1>
         <div class="date-distance">
-          <div class="date-row">
-            <div class="date">
-              <p>00</p>
-            </div>
-            <p>Лет</p>
-          </div>
-          <div class="date-row">
-            <div class="date">
-              <p>00</p>
-            </div>
-            <p>Дней</p>
-          </div>
-          <div class="date-row">
-            <div class="date">
-              <p>00</p>
-            </div>
-            <p>Часов</p>
-          </div>
+          <p>...</p>
         </div>
         <form class="date-form">
           <input class="input" type="datetime-local" placeholder="hhhh"/>
-          <button class="button">Start</button>
+          <button class="button">Старт</button>
         </form>
       </div>
     </div>
