вроде что-то заработало

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                         </div>
                         <div class="forecast__content">
                             <div class="forecast__content-item">
-                                <!-- <div class="forecast__content-inner"> -->
+
                                 <div class="forecast__content-inner-time">
                                     <div class="date">
                                         <span class="actual__date">17 may</span>
@@ -116,15 +116,16 @@
                                         <ul class="forecast__inner-list">
                                             <li class="forecast__inner-list-item">
                                                 <span>Temperature:</span>
-                                                <span class="details__temperature">
-                                                    
-                                                </span>
+
+                                                <span class="forecast__temperature">3</span>
                                                 <svg width="8" height="25" viewBox="0 0 20 40" fill="none"
                                                     xmlns="http://www.w3.org/2000/svg">
                                                     <path fill-rule="evenodd" clip-rule="evenodd"
                                                         d="M8.5 15C12.0899 15 15 12.0899 15 8.5C15 4.91015 12.0899 2 8.5 2C4.91015 2 2 4.91015 2 8.5C2 12.0899 4.91015 15 8.5 15Z"
                                                         stroke="black" stroke-width="4" />
                                                 </svg>
+
+
 
                                             </li>
                                             <li class="forecast__inner-list-item">
@@ -150,10 +151,108 @@
                                     </div>
 
                                 </div>
-                                <!-- </div> -->
+
                             </div>
-                            <div class="forecast__content-item"></div>
-                            <div class="forecast__content-item"></div>
+                            <div class="forecast__content-item">
+                                <div class="forecast__content-inner-time">
+                                    <div class="date">
+                                        <span class="actual__date">17 may</span>
+                                    </div>
+                                    <div class="time">
+                                        <span class="forecast__time">00:00</span>
+                                    </div>
+                                </div>
+                                <div class="forecast__content-inner-info">
+                                    <div class="forecast__list-holder">
+                                        <ul class="forecast__inner-list">
+                                            <li class="forecast__inner-list-item">
+                                                <span>Temperature:</span>
+
+                                                <span class="forecast__temperature">3</span>
+                                                <svg width="8" height="25" viewBox="0 0 20 40" fill="none"
+                                                    xmlns="http://www.w3.org/2000/svg">
+                                                    <path fill-rule="evenodd" clip-rule="evenodd"
+                                                        d="M8.5 15C12.0899 15 15 12.0899 15 8.5C15 4.91015 12.0899 2 8.5 2C4.91015 2 2 4.91015 2 8.5C2 12.0899 4.91015 15 8.5 15Z"
+                                                        stroke="black" stroke-width="4" />
+                                                </svg>
+
+
+
+                                            </li>
+                                            <li class="forecast__inner-list-item">
+                                                <span>Feels like:</span>
+
+                                                <span class="forecast__feelslike"></span>
+                                                <svg width="8" height="25" viewBox="0 0 20 40" fill="none"
+                                                    xmlns="http://www.w3.org/2000/svg">
+                                                    <path fill-rule="evenodd" clip-rule="evenodd"
+                                                        d="M8.5 15C12.0899 15 15 12.0899 15 8.5C15 4.91015 12.0899 2 8.5 2C4.91015 2 2 4.91015 2 8.5C2 12.0899 4.91015 15 8.5 15Z"
+                                                        stroke="black" stroke-width="4" />
+                                                </svg>
+
+                                            </li>
+                                        </ul>
+                                    </div>
+
+                                    <div class="forecast__weatherinfo">
+                                        <span class="forecast__weather-descr"></span>
+                                        <div class="weather__icon-holder forecast__icon-holder">
+                                            <img src="./image/cloud-icon.png" alt="Weather icon" class="forecast__icon">
+                                        </div>
+                                    </div>
+
+                                </div>
+                            </div>
+                            <div class="forecast__content-item">
+                                <div class="forecast__content-inner-time">
+                                    <div class="date">
+                                        <span class="actual__date">17 may</span>
+                                    </div>
+                                    <div class="time">
+                                        <span class="forecast__time">00:00</span>
+                                    </div>
+                                </div>
+                                <div class="forecast__content-inner-info">
+                                    <div class="forecast__list-holder">
+                                        <ul class="forecast__inner-list">
+                                            <li class="forecast__inner-list-item">
+                                                <span>Temperature:</span>
+
+                                                <span class="forecast__temperature">3</span>
+                                                <svg width="8" height="25" viewBox="0 0 20 40" fill="none"
+                                                    xmlns="http://www.w3.org/2000/svg">
+                                                    <path fill-rule="evenodd" clip-rule="evenodd"
+                                                        d="M8.5 15C12.0899 15 15 12.0899 15 8.5C15 4.91015 12.0899 2 8.5 2C4.91015 2 2 4.91015 2 8.5C2 12.0899 4.91015 15 8.5 15Z"
+                                                        stroke="black" stroke-width="4" />
+                                                </svg>
+
+
+
+                                            </li>
+                                            <li class="forecast__inner-list-item">
+                                                <span>Feels like:</span>
+
+                                                <span class="forecast__feelslike"></span>
+                                                <svg width="8" height="25" viewBox="0 0 20 40" fill="none"
+                                                    xmlns="http://www.w3.org/2000/svg">
+                                                    <path fill-rule="evenodd" clip-rule="evenodd"
+                                                        d="M8.5 15C12.0899 15 15 12.0899 15 8.5C15 4.91015 12.0899 2 8.5 2C4.91015 2 2 4.91015 2 8.5C2 12.0899 4.91015 15 8.5 15Z"
+                                                        stroke="black" stroke-width="4" />
+                                                </svg>
+
+                                            </li>
+                                        </ul>
+                                    </div>
+
+                                    <div class="forecast__weatherinfo">
+                                        <span class="forecast__weather-descr"></span>
+                                        <div class="weather__icon-holder forecast__icon-holder">
+                                            <img src="./image/cloud-icon.png" alt="Weather icon" class="forecast__icon">
+                                        </div>
+                                    </div>
+
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
