исправлена ошибка в методе isEmpty класса Storage

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>class</title>
 </head>
 <body>
-    <script src="/details-1/sctipt.js"></script>
+    <script src="/details-1/main.js"></script>
 </body>
 </html>
