--- a/index.html
+++ b/index.html
@@ -1,14 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css">
     <script src="./scripts.js" type="module"></script>
-    <title>Document</title>
+    <title>chat</title>
 </head>
 <body>
-    
+    <div class="main">
+        <div class="header">
+            <button class="settings">Настройки</button>
+            <button class="logout">Выйти</button> 
+        </div>
+        <div class="messages">
+            <p class="my_messages">Я: Добрый день!</p>
+            <p class="other_messages">Собеседник мой: Добрый день!</p>
+            <p class="other_messages">Собеседник мой: А это второе и, кажется, оно очень длинное, чтобы поместиться на одной строке</p>
+            <p class="my_messages">Я: Добрый день!</p>
+            <p class="other_messages">Собеседник мой: Добрый день!</p>
+            <p class="other_messages">Собеседник мой: Добрый день!</p>
+            <p class="other_messages">Собеседник мой: Добрый день!</p>
+            <p class="other_messages">Собеседник мой: Добрый день!</p>
+            <p class="other_messages">Собеседник мой: Добрый день!</p>
+        </div>
+        <form class="form">
+            <input class="input" type="text">
+            <button>-></button>
+        </form>
+    </div>
 </body>
 </html>
