--- a/index.html
+++ b/index.html
@@ -9,86 +9,44 @@
   </head>
   <body>
     <div class="container">
-      <nav class="nav">
+      <div class="nav">
         <button class="nav__settings btn">Настройки</button>
 
         <button class="nav__exit btn">Выйти</button>
-      </nav>
+      </div>
 
-      <main class="main">
-        <div class="main__message-list">
-          <div class="main__message-own message read">
-            <p>Я: Добрый день!</p>
-            <p class="main__time">18:45</p>
-          </div>
-
-          <div class="main__message-other message read">
-            <p>Собеседник мой: Добрый день!</p>
-            <p class="main__time">18:45</p>
-          </div>
-
-          <div class="main__message-other message read">
-            <p>
-              Собеседник мой: А это второе и, кажется, оно очень длинное, чтобы поместиться на одной
-              строке
-            </p>
-            <p class="main__time">18:45</p>
-          </div>
-
-          <div class="main__message-own message">
-            <p>Я: Добрый день!</p>
-            <p class="main__time">18:45</p>
-          </div>
-          <div class="main__message-own message">
-            <p>Я: Добрый день!</p>
-            <p class="main__time">18:45</p>
-          </div>
-          <div class="main__message-own message">
-            <p>Я: Добрый день!</p>
-            <p class="main__time">18:45</p>
-          </div>
-          <div class="main__message-own message">
-            <p>Я: Добрый день!</p>
-            <p class="main__time">18:45</p>
-          </div>
-          <div class="main__message-own message">
-            <p>Я: Добрый день!</p>
-            <p class="main__time">18:45</p>
-          </div>
-          <div class="main__message-own message">
-            <p>Я: Добрый день!</p>
-            <p class="main__time">18:45</p>
-          </div>
-          <div class="main__message-own message">
-            <p>Я: Добрый день!</p>
-            <p class="main__time">18:45</p>
-          </div>
-          <div class="main__message-own message">
-            <p>Я: Добрый день!</p>
-            <p class="main__time">18:45</p>
-          </div>
-          <div class="main__message-own message">
-            <p>Я: Добрый день!</p>
-            <p class="main__time">18:45</p>
-          </div>
-          <div class="main__message-own message">
-            <p>Я: Добрый день!</p>
-            <p class="main__time">18:45</p>
-          </div>
-          <div class="main__message-own message">
-            <p>Я: Добрый день!</p>
-            <p class="main__time">18:45</p>
-          </div>
-          <div class="main__message-own message">
-            <p>Я: Добрый день!</p>
-            <p class="main__time">18:45</p>
-          </div>
-          <div class="main__message-own message">
-            <p>Я: Добрый день!</p>
-            <p class="main__time">18:45</p>
-          </div>
+      <div class="main">
+        <div class="main__message-own message read">
+          <p>Я: Добрый день!</p>
+          <p class="main__time">18:45</p>
         </div>
-      </main>
+
+        <div class="main__message-other message read">
+          <p>Собеседник мой: Добрый день!</p>
+          <p class="main__time">18:45</p>
+        </div>
+
+        <div class="main__message-other message read">
+          <p>
+            Собеседник мой: А это второе и, кажется, оно очень длинное, чтобы поместиться на одной
+            строке
+          </p>
+          <p class="main__time">18:45</p>
+        </div>
+
+        <div class="main__message-own message">
+          <p>Я: Добрый день!</p>
+          <p class="main__time">18:45</p>
+        </div>
+        <div class="main__message-own message">
+          <p>Я: Добрый день!</p>
+          <p class="main__time">18:45</p>
+        </div>
+        <div class="main__message-own message">
+          <p>Я: Добрый день!</p>
+          <p class="main__time">18:45</p>
+        </div>
+      </div>
 
       <form class="form-message">
         <input type="text" class="form-message__input input" placeholder="сообщение.." />
