--- a/index.html
+++ b/index.html
@@ -39,11 +39,7 @@
           <p class="main__time">18:45</p>
         </div>
         <div class="main__message-own message">
-          <p>Я: Добрый день!</p>
-          <p class="main__time">18:45</p>
-        </div>
-        <div class="main__message-own message">
-          <p>Я: Добрый день!</p>
+          <p>Как дела?</p>
           <p class="main__time">18:45</p>
         </div>
       </div>
@@ -52,6 +48,23 @@
         <input type="text" class="form-message__input input" placeholder="сообщение.." />
         <button type="submit" class="form-message__btn btn">-></button>
       </form>
+
+      <div class="popup">
+        <div class="popup__inner">
+          <div class="popup__top">
+            <h3 class="popup__title">Настройки</h3>
+            <button class="popup__button">+</button>
+          </div>
+          <h3 class="popup__title">Имя в чате</h3>
+
+          <form action="" class="chat__form">
+            <input type="text" class="chat__input input" placeholder="Стив" />
+            <button class="chat__button btn">-></button>
+          </form>
+        </div>
+      </div>
     </div>
+
+    <script src="index.js"></script>
   </body>
 </html>
