Сделал скролл сообщений

--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
                             </p>
                             <p class="message__time">18:45</p>
                         </div>
-
                     </div>
                     <div class="message message--interlocutor">
                         <div class="message__inner">
@@ -37,7 +36,6 @@
                             </p>
                             <p class="message__time">18:45</p>
                         </div>
-
                     </div>
                     <div class="message message--interlocutor">
                         <div class="message__inner">
@@ -48,7 +46,6 @@
                             </p>
                             <p class="message__time">18:45</p>
                         </div>
-
                     </div>
                     <div class="message message--sent">
                         <div class="message__inner">
@@ -57,7 +54,46 @@
                             </p>
                             <p class="message__time">18:45</p>
                         </div>
-
+                    </div>
+                    <div class="message message--sent">
+                        <div class="message__inner">
+                            <p class="message__text">
+                                Я: <span>Добрый день!</span>
+                            </p>
+                            <p class="message__time">18:45</p>
+                        </div>
+                    </div>
+                    <div class="message message--sent">
+                        <div class="message__inner">
+                            <p class="message__text">
+                                Я: <span>Добрый день!</span>
+                            </p>
+                            <p class="message__time">18:45</p>
+                        </div>
+                    </div>
+                    <div class="message message--sent">
+                        <div class="message__inner">
+                            <p class="message__text">
+                                Я: <span>Добрый день!</span>
+                            </p>
+                            <p class="message__time">18:45</p>
+                        </div>
+                    </div>
+                    <div class="message message--sent">
+                        <div class="message__inner">
+                            <p class="message__text">
+                                Я: <span>Добрый день!</span>
+                            </p>
+                            <p class="message__time">18:45</p>
+                        </div>
+                    </div>
+                    <div class="message message--sent">
+                        <div class="message__inner">
+                            <p class="message__text">
+                                Я: <span>Добрый день!</span>
+                            </p>
+                            <p class="message__time">18:45</p>
+                        </div>
                     </div>
                 </div>
                 <form action="" class="chat__form">
