Поменял input на div, чтобы при вводе сообщения поле увеличивалось

--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@
                     </div>
                 </div>
                 <form action="" class="chat__form">
-                    <input type="text" class="chat__input" placeholder="сообщение..">
+                    <div class="chat__input" contenteditable="true"></div>
+                    <p class="chat__input-placeholder">Сообщение..</p>
                     <button class="chat__button">
                         ->
                     </button>
