--- a/index.html
+++ b/index.html
@@ -49,9 +49,12 @@
         </div>
 
         <div class="chat">
-            <div class="message my">
-                <span>Я: </span>
-                <span>Добрый день!</span>
+            <div class="message">
+                <span>Собеседник мой: </span>
+                <span>А это второе и, кажется, оно очень
+                    длинное, чтобы поместиться на
+                    одной строке
+                </span>
                 <div class="time">
                     <span class="hours">18</span>
                     <span>:</span>
@@ -60,6 +63,20 @@
             </div>
             <div class="message">
                 <span>Собеседник мой: </span>
+                <span>А это второе и, кажется, оно очень
+                    длинное, чтобы поместиться на
+                    одной строке
+                </span>
+                <div class="time">
+                    <span class="hours">18</span>
+                    <span>:</span>
+                    <span class="minutes">45</span>
+                </div>
+            </div>
+            
+            
+            <div class="message my sent">
+                <span>Я: </span>
                 <span>Добрый день!</span>
                 <div class="time">
                     <span class="hours">18</span>
@@ -79,7 +96,16 @@
                     <span class="minutes">45</span>
                 </div>
             </div>
-            <div class="message my sent">
+            <div class="message">
+                <span>Собеседник мой: </span>
+                <span>Добрый день!</span>
+                <div class="time">
+                    <span class="hours">18</span>
+                    <span>:</span>
+                    <span class="minutes">45</span>
+                </div>
+            </div>
+            <div class="message my">
                 <span>Я: </span>
                 <span>Добрый день!</span>
                 <div class="time">
@@ -88,7 +114,6 @@
                     <span class="minutes">45</span>
                 </div>
             </div>
-
         </div>
 
         <div class="input">
